[project]
name = "pmt-apc-modbus"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Fajtai",email = "daniel.fajtai@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "reportlab (>=4.4.4,<5.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pymodbus (>=3.11.3,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
